album covers disappears < S viewport. Small fixes
TODO: titles justified < 700px viewport, buttons on titles, ADD tabs "creato per" and "artisti popolari"

--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ p {
 /*  css media player footer */
 
 .media_player {
-    background: rgb(40,40,40);
-    background: linear-gradient(180deg, rgba(40,40,40,1) 0%, rgba(55,55,55,1) 100%); 
+    background: rgb(30,30,30);
+    background: linear-gradient(180deg, rgba(30,30,30,1) 0%, rgba(36,36,36,1) 100%); 
     width: 100vw;
     height: 100px;
     position: fixed;
@@ -122,7 +122,7 @@ p {
 /*  css sidebar fixed left  */
 
 .sidebar {
-    background-color: #040404;
+    background-color: #0c0c0c;
     height: 100vh;
     width: 230px;
     position: fixed;
@@ -135,6 +135,7 @@ p {
 .sidebar a {
     color: grey;
     text-decoration: none;
+    transition: 0.15s;
 }
 
 .sidebar a:hover {
@@ -160,10 +161,11 @@ p {
 
 .home_btn {
     margin-top: 1rem;
+    align-items: center;
 }
 
-.home_btn .fas {
-    font-size: 20px;
+.home_btn img {
+    height: 20px;
 }
 
 ul {
@@ -366,7 +368,11 @@ li a {
         width: 70px;
     }
 
-    .sidebar span, ul, h3 {
+    .sidebar span, ul {
+        display: none;
+    }
+
+    .sidebar h3 {
         display: none;
     }
 
@@ -390,6 +396,32 @@ li a {
 
     .card {
         max-width: calc(100% / 2);
+    }
+
+    .home_btn {
+        text-align: center;
+    }
+
+    .home_btn img {
+        height: 30px;
+    }
+    
+    .sidebar a:hover {
+        color: white;
+        border-left: none;
+    }
+
+    .sidebar img {
+        transition: 0.15s;
+    }
+    
+    .sidebar img:hover {
+        color: white;
+        border-bottom: 3px solid lime;
+    }
+
+    .album_card {
+        display: none;
     }
 }
 
